# depth_calibration

./: .gitignore  CMakeLists.txt  build.sh  manifest.xml
cmake_modules/: GenerateVersionDefinitions.cmake
include/: associate.hpp  calibration.hpp  estimators.hpp  mrpt_scene.hpp  random_sampler.hpp  ransac.hpp  sampler.hpp  segmentation.hpp  sensors.hpp  support_measurement.hpp  types.hpp
include/util/: math.hpp  random.hpp  statistical.hpp  version.h.in
src/: calibrate.cpp  global_error.cpp  local_distortion.cpp  show_calibration.cpp  show_correction.cpp  show_distortion.cpp
test/: test_plane_estimation.cpp  test_plane_transform.cpp
